--- a/src/main/resources/templates/system/role/list.html
+++ b/src/main/resources/templates/system/role/list.html
@@ -31,12 +31,12 @@
                                                             </a>
                                                         </@shiro.hasPermission>
                                                         <div class="input-group">
-                                                            <input type="text" name="search" value="${search!}" class="form-control" placeholder="Search" autocomplete="off">
+                                                            <input type="text" name="search" value="${search!}" class="form-control" placeholder="<@spring.message code='system.common.placeholder.search'/>" autocomplete="off">
                                                             <button class="btn btn-default btn-flat" type="submit">
                                                                 <i class="fa fa-search"></i>
                                                             </button>
                                                             <a href="/system/role/list/1" class="btn btn-default">
-                                                                <i class="fa fa-sync" style="margin-top:6px;"></i>
+                                                                <i class="fa fa-sync-alt" style="margin-top: 5px;"></i>
                                                             </a>
                                                         </div>
                                                     </div>
