--- a/src/main/resources/templates/system/dept/list.html
+++ b/src/main/resources/templates/system/dept/list.html
@@ -27,8 +27,12 @@
                                                         </@shiro.hasPermission>
                                                         <input type="text" name="search" value="${search!}" class="form-control" placeholder="<@spring.message code='system.common.placeholder.search'/>" autocomplete="off">
                                                         <div class="input-group">
-                                                            <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
-                                                            <a href="/system/dept/list/1" class="btn btn-default mt-2"><i class="fa fa-sync"></i></a>
+                                                            <button class="btn btn-default" type="submit">
+                                                                <i class="fa fa-search"></i>
+                                                            </button>
+                                                            <a href="/system/dept/list/1" class="btn btn-default">
+                                                                <i class="fa fa-sync-alt" style="margin-top: 5px;"></i>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </div>
