--- a/src/main/resources/templates/system/user/list.html
+++ b/src/main/resources/templates/system/user/list.html
@@ -29,7 +29,7 @@
                                                                 <i class="fa fa-search"></i>
                                                             </button>
                                                             <a href="/system/user/list/1" class="btn btn-default">
-                                                                <i class="fa fa-sync" style="margin-top:6px;"></i>
+                                                                <i class="fa fa-sync-alt" style="margin-top: 5px;"></i>
                                                             </a>
                                                         </div>
                                                     </div>
