--- a/src/main/resources/templates/system/menu/add.html
+++ b/src/main/resources/templates/system/menu/add.html
@@ -69,10 +69,14 @@
                                                     &nbsp;
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <button type="submit" class="btn btn-success" lay-submit lay-filter="submit">
+                                                    <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
                                                         <i class="fa fa-save"></i>
-                                                        <@spring.message code='system.menu.comm.action.submit'/>
+                                                        <@spring.message code='system.common.action.submit'/>
                                                     </button>
+                                                    <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
+                                                        <i class="fa fa-angle-left"></i>
+                                                        <@spring.message code='system.common.action.cancel'/>
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
